stub-webservice/main/default/objects/StubWebServiceSetting__mdt/StubWebServiceSetting__mdt.object-meta.xml
<CustomObject>
    <label>Stub Webservice Setting</label>
</CustomObject>