stub-webservice/main/default/objects/StubWebServiceSetting__mdt/fields/FilePath__c.field-meta.xml
<CustomField>
    <fullName>FilePath__c</fullName>
    <label>File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>