stub-webservice/main/default/objects/StubWebServiceSetting__mdt/fields/RequestURI__c.field-meta.xml
<CustomField>
    <fullName>RequestURI__c</fullName>
    <label>Request URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>